--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -1,4 +1,12 @@
+$dark-fontColor: #000;
 $content-fontcolor: #333;
+$medium-fontColor: #666;
+$light-fontColor: #999;
 $content-notice-fontcolor: #777;
-$content-bgcolor: #f1f1f1;
-$bgColor: #fff;
+$content-bgColor: #F1F1F1;
+$search-bgColor: #F5F5F5;
+$search-fontColor: #B7B7B7;
+$hightlight-fontColor: #E93B3B;
+$btn-bgColor: #0091FF;
+$bgColor: #FFF;
+$dark-bgColor: #F8F8F8;
